[gd_scene load_steps=15 format=3 uid="uid://ca20iiy4kyrhu"]

[ext_resource type="AudioStream" uid="uid://c6wgdi2agd0n2" path="res://assets/sound_effect/banished-sound-95250.mp3" id="1_0qsht"]
[ext_resource type="Script" uid="uid://c7tmvs3hiet20" path="res://scripts/misc/global_sound_manager.gd" id="1_oqrb8"]
[ext_resource type="AudioStream" uid="uid://3vqe2kkk5k40" path="res://assets/sound_effect/enchanted-spell-casting-229208.mp3" id="2_oqrb8"]
[ext_resource type="AudioStream" uid="uid://7t6kwp6yoifa" path="res://assets/sound_effect/fire-magic-5-378639.mp3" id="3_dfq87"]
[ext_resource type="AudioStream" uid="uid://cshp17vqgj4vm" path="res://assets/sound_effect/fire-spell-impact-393921.mp3" id="4_edgwt"]
[ext_resource type="AudioStream" uid="uid://b5jfpgdwklynk" path="res://assets/sound_effect/fireball-whoosh-2-179126.mp3" id="5_vx7qy"]
[ext_resource type="AudioStream" uid="uid://d27hrxmlfyoxo" path="res://assets/sound_effect/magic-strike-5856.mp3" id="6_oms51"]
[ext_resource type="AudioStream" uid="uid://41wdu0yuhlgs" path="res://assets/sound_effect/sword-slash-and-swing-185432.mp3" id="7_1r7tn"]
[ext_resource type="AudioStream" uid="uid://kwbppnsefund" path="res://assets/sound_effect/sword-slash-with-metal-shield-impact-185433.mp3" id="8_l4jm6"]
[ext_resource type="AudioStream" uid="uid://bstnabovt611s" path="res://assets/sound_effect/sword-slash-with-metallic-impact-185435.mp3" id="9_t8jhh"]
[ext_resource type="AudioStream" uid="uid://b6drvfgkohu5v" path="res://assets/sound_effect/sword-sound-2-36274.mp3" id="10_f76sn"]
[ext_resource type="AudioStream" uid="uid://c70dggymoxadk" path="res://assets/sound_effect/teleport-90137.mp3" id="11_ukoe5"]
[ext_resource type="AudioStream" uid="uid://u0k8tv6lc6fc" path="res://assets/sound_effect/teleport-game-sound-effect-379236.mp3" id="12_joocn"]
[ext_resource type="AudioStream" uid="uid://p2ewkfqbvtxf" path="res://assets/sound_effect/whoosh-blow-flutter-shortwav-14678.mp3" id="13_cdv86"]

[node name="GlobalSoundManager" type="Node"]
script = ExtResource("1_oqrb8")

[node name="Snap" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_0qsht")

[node name="Heal" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_oqrb8")

[node name="BigFireball" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_dfq87")

[node name="BigFireballImpact" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_edgwt")

[node name="LightFireball" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_vx7qy")

[node name="Ultimatum" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_oms51")

[node name="AirSlash" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_1r7tn")

[node name="SpinningSlash" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_l4jm6")

[node name="MetalImpact" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_t8jhh")

[node name="Stance" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_f76sn")

[node name="Teleport" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_ukoe5")

[node name="Ressurect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_joocn")

[node name="Dash" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_cdv86")
